--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "🔥 Inferno Boilerplate 🔥",
   "main": "src/index.js",
   "scripts": {
+    "build": "rm -rf build & webpack --config webpack.prod.js",
+    "build:serve": " cd build & python -m SimpleHTTPServer 3000",
     "lint": "eslint src/**/*.js",
-    "server": "webpack-dev-server --quiet --config webpack.conf.js --host 0.0.0.0 --port 4000",
+    "server": "webpack-dev-server --quiet --config webpack.dev.js --host 0.0.0.0 --port 4000",
     "mk": "node internals/scripts/mk.js",
     "start": "npm-run-all --parallel lint server"
   },
@@ -25,6 +27,7 @@
     "url": "https://github.com/garetmckinley/inferno-boilerplate/issues"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.4",
     "babel-core": "^6.4.0",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.1",
@@ -47,11 +50,13 @@
     "inquirer": "^2.0.0",
     "node-sass": "^4.0.0",
     "npm-run-all": "^3.1.2",
+    "postcss-loader": "^1.2.1",
+    "precss": "^1.4.0",
     "promise": "^7.1.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1",
+    "webpack": "v2.2.0-rc.0",
+    "webpack-dev-server": "v2.2.0-rc.0",
     "webpack-manifest-plugin": "^1.1.0"
   },
   "dependencies": {
@@ -66,6 +71,7 @@
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-thunk": "^2.1.0",
+    "webpack-dev-server": "v2.2.0-rc.0",
     "whatwg-fetch": "^2.0.1"
   }
 }
