--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rm -rf build & webpack --config webpack.prod.js",
     "build:serve": " cd build & python -m SimpleHTTPServer 3000",
-    "lint": "eslint src/**/*.js",
+    "lint": "eslint ./**/*.js",
     "server": "webpack-dev-server --quiet --config webpack.dev.js --host 0.0.0.0 --port 4000",
     "mk": "babel-node internals/scripts/mk.js",
     "start": "npm-run-all --parallel lint server"
