--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "rm -rf build & webpack --config webpack.prod.js",
-    "build:serve": " cd build & python -m SimpleHTTPServer 3000",
+    "build:serve": " cd build && python -m SimpleHTTPServer 3000",
     "lint": "eslint ./",
     "server": "webpack-dev-server --quiet --config webpack.dev.js --host 0.0.0.0 --port 4000",
     "mk": "babel-node internals/scripts/mk.js",
